# ai-course-starter

./: .gitignore  README.md  pyproject.toml  requirements.txt  zip_task.sh
.github/workflows/: grade.yml
class_3/task-01-tech-extract/: README.md  main.py  pyproject.toml  solution.py
class_3/task-02-ticket-classify/: README.md  main.py  pyproject.toml  setup.sh  solution.py
class_4/task-01-code-refactorer/: README.md  app.py  pyproject.toml  setup.sh  solution.py
class_4/task-02-voice-transcribe/: README.md  app.py  download_and_extract.sh  pyproject.toml  setup.sh  solution.py
class_5/: notes.md
class_5/task-01-hallucination-verifier/: README.md  app.py  main.py  pyproject.toml  sample_questions.jsonl  setup.sh  solution.py
class_5/task-02-invoice-parser/: README.md  app.py  main.py  pyproject.toml  sample_invoices.jsonl  setup.sh  solution.py
task-01-tech-extract/: README.md  jobposts_sample.jsonl  main.py  solution.py
task-02-ticket-classify/: README.md  solution.py  tickets_sample.jsonl
tools/: list_changed_tasks.sh
